@@ -3,6 +3,7 @@ Revision history for Dist-Zilla-Plugin-VerifyPhases
 {{$NEXT}}
           - change end-of-phase log messages to use the name of the phase, not
             the name of the method being called
+          - add a end-of-phase log message for MetaProvider
 
 0.016     2017-07-21 19:57:28Z
           - debug logging is added at the end of each phase, to provide useful
